[tool.poetry]
name = "leetcode-local-tester"
version = "0.3.0"
description = ""
authors = ["shen <goodstudyQAQ@163.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "leetcode_local_tester"}]

[tool.poetry.dependencies]
python = "^3.7"
click = "8.1.4"
requests = "^2.31.0"
alive-progress = "^3.1.4"

[tool.poetry.scripts]
leetcode-local-tester = "leetcode_local_tester.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
